# LedgerBridge

./: .env.example  .gitignore  DEVELOPER_GUIDE.md  DOCKER_QUICK_START.md  Dockerfile  LICENSE  MANIFEST.in  OLLAMA_TEST_COMMAND.md  README.md  SPARK_IMPLEMENTATION_FINAL_REPORT.md  TESTING_GUIDE.md  config.example.yaml  docker-compose.override.yml.disabled  docker-compose.yml  fireflyiii_in.json  manage.py  paperless_api_contract.md  paperless_out.json  problembeschreibung.txt  pyproject.toml  test_chat_context_size.py  test_email.py  test_ollama_call.py
.github/agents/: paperless_spark_firefly_agent.agent.md
docker/: entrypoint.sh
docs/: AGENT_ARCHITECTURE.md  AI_RERUN_INTERPRETATION_ROADMAP.md  AI_SUGGESTIONS_REPORT.md  OLLAMA_TEST_COMMAND.md  PRODUCTION_DEPLOYMENT.md  SPARKLINK_USER_GUIDE.md  SPARK_EVALUATION_REPORT.md  SPARK_FUNCTIONALITY_ANALYSIS_REPORT.md  SPARK_IMPLEMENTATION_FINAL_REPORT.md  SPARK_IMPLEMENTATION_PLAN.md  SPARK_TAG_NORMALIZATION_REPORT.md  WORKFLOW.md  firefly_sync_assistant_everything_roadmap.md  firefly_sync_assistant_roadmap.md  fireflyiii_api_contract.md  review_ai_suggestions_upgrade_roadmap.md
docs/debugging/: unified-review-500.md
docs/verification/: unified-review-verification.md
src/paperless_firefly/: __init__.py  config.py
src/paperless_firefly/confidence/: __init__.py  scorer.py
src/paperless_firefly/extractors/: __init__.py  base.py  einvoice_extractor.py  ocr_extractor.py  router.py
src/paperless_firefly/firefly_client/: __init__.py  client.py
src/paperless_firefly/matching/: __init__.py  engine.py
src/paperless_firefly/paperless_client/: __init__.py  client.py
src/paperless_firefly/review/: __init__.py  workflow.py
src/paperless_firefly/review/web/: __init__.py  admin.py  app.py  apps.py  context_processors.py  db_router.py  field_help.py  models.py  settings.py  urls.py  views.py
src/paperless_firefly/review/web/ai_context/: SPARKLINK_AI_CONTEXT.txt
src/paperless_firefly/review/web/management/commands/: process_ai_queue.py
src/paperless_firefly/review/web/migrations/: 0001_initial.py  0002_add_llm_settings.py  0003_add_ai_schedule_settings.py  0004_add_firefly_importer_token.py  0005_aijobqueue_syncpoolrecord_syncimportlog_and_more.py  0006_extend_sync_entity_types.py  __init__.py
src/paperless_firefly/review/web/static/: style.css
src/paperless_firefly/review/web/templates/review/: ai_queue.html  archive.html  audit_trail_detail.html  audit_trail_list.html  (+21 more)
src/paperless_firefly/runner/: __init__.py  main.py
src/paperless_firefly/schemas/: __init__.py  dedupe.py  finance_extraction.py  firefly_payload.py  interpretation_trace.py  linkage.py  split_builder.py
src/paperless_firefly/services/: __init__.py  ai_queue.py  firefly_sync.py  reconciliation.py  reference_mapper.py  sync_fingerprints.py
src/paperless_firefly/spark_ai/: __init__.py  prompts.py  service.py
src/paperless_firefly/state_store/: __init__.py  sqlite_store.py
src/paperless_firefly/state_store/migrations/: 001_firefly_cache.py  002_match_proposals.py  003_llm_columns.py  004_interpretation_runs.py  005_llm_feedback.py  006_llm_cache.py  007_firefly_cache_soft_delete.py  008_linkage_table.py  009_extractions_updated_at.py  010_ai_job_queue.py  011_user_ownership.py  __init__.py  runner.py
tests/: conftest.py  generate_test_pdfs.py  test_ai_queue.py  test_auth_web.py  test_cli.py  test_clients.py  test_confidence.py  test_dedupe.py  test_einvoice.py  test_extractors.py  test_firefly_payload.py  test_firefly_sync.py  test_integration.py  test_interpretation_trace.py  test_matching.py  test_reconciliation.py  test_spark_ai.py  test_split_builder.py  test_state_store.py  test_sync_assistant.py  test_unified_review.py  test_web_review.py
tests/fixtures/: __init__.py  peppol_sample.xml  ubl_sample.xml  xrechnung_sample.xml  zugferd_sample.xml
